Changelog
=========


1.6.5 (unreleased)
------------------

- Redirect users without any modifying permissions (without editable border)
  to the download when not hitting a specific view.
  Also add File back to allowAnonymousViewAbout for making sure that /view
  is added in the navigation.
  [jone]


1.6.4 (2013-06-04)
------------------

- Fix Upgradestep.
  [tschanzt]


1.6.3 (2013-05-31)
------------------

- Add additional Schemata for removal since it was renamed.
  [tschanzt]

- Add permission to edit advanced fields.
  [tschanzt]


1.6.2 (2013-05-17)
------------------

- Hide author in file view if anonymous and allowAnonymousViewAbout is False.
  [Julian Infanger]


1.6.1 (2013-04-17)
------------------

- Lawgiver support: map permissions.
  [jone]


1.6 (2013-01-21)
----------------

- Drop Plone 4.0 support.
  [jone]

- Hide view action for file.
  [Julian Infanger]


1.5 (2012-10-16)
----------------

- Add missing dependency in setup.py
  [tschanzt]

- use new document_date instead of effectiveDate.
  [tschanzt]


1.4.12 (2012-05-09)
-------------------

- Show time too on contenthostory viewlet.
  [mathias.leimgruber]


1.4.11 (2012-05-01)
-------------------

- Readded i18n:translate for content history viewlet action.
  [mathias.leimgruber]


1.4.10 (2012-04-30)
-------------------

- Fixed filename in response header for download.
  [Julian Infanger]


1.4.9 (2012-03-12)
------------------

- Table head should be in thead, body in tbody.
  [Julian Infanger]


1.4.8 (2012-03-05)
------------------

- Added plone default classes to tables.
  [Julian Infanger]


1.4.7 (2011-12-21)
------------------

- The image preview, should no be squarish.
  [mathias.leimgruber]


1.4.6 (2011-12-21)
------------------

- Fixed MANIFEST.in (include *.rst)
  [mathias.leimgruber]


1.4.5 (2011-12-21)
------------------

- add test for is_image method in FileView
  [eschmutz]

- fix: error when uploading a not scalable image mimetype (i.e. .dwg)