@@ -13,10 +13,17 @@
 
 	  <browser:page
 	      for="ftw.file.interfaces.IFile"
-	      name="images"	
+	      name="images"
 	      class=".scaling.FtwImageScaling"
 	      allowed_interface="plone.app.imaging.interfaces.IImageScaling"
 	      permission="zope2.View" />
+
+    <browser:page
+        for="ftw.file.interfaces.IFile"
+        name="download"
+        class=".download.DownloadFileView"
+        permission="zope2.View"
+        />
 
 	 <browser:page
 		for="ftw.file.interfaces.IFile"
