@@ -5,6 +5,10 @@ Changelog
 1.6.5 (unreleased)
 ------------------
 
+- File download: redirect to URL containing filename.
+  This allows us to easily track downloads in statistics tools.
+  [jone]
+
 - Redirect users without any modifying permissions (without editable border)
   to the download when not hitting a specific view.
   Also add File back to allowAnonymousViewAbout for making sure that /view
